# koklaude

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cargo-deny.sh  deny.toml  justfile
.github/: cliff.toml  dependabot.yml
.github/workflows/: ci.yml  release-pr.yml  tag-release.yml
crates/hanasu/: Cargo.toml
crates/hanasu/examples/: spike.rs
crates/hanasu/src/: engine.rs  error.rs  g2p.rs  lib.rs  tokenizer.rs  voice.rs
crates/koklaude/: Cargo.toml
crates/koklaude/src/: clean.rs  client.rs  codex_hook.rs  config.rs  daemon.rs  hook.rs  ipc.rs  logging.rs  main.rs  playback.rs  setup.rs  toggle.rs  transcript.rs
crates/koklaude/tests/fixtures/codex/: partial_tail.jsonl  plain_reply.jsonl  tool_noise_reply.jsonl
docs/: architecture.md  codex-support-plan.md  daemon-and-sockets.md  debug-no-speech.md  decisions.md  demo.md  logging.md  plan.md  prerequisites.md  release.md  spike.md
