[package]
name = "hanasu"
description = "A small Rust text-to-speech engine running the Kokoro-82M model via ONNX (ort + espeak-ng)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Engine dependencies (ort, espeak-rs, audio) are added when we implement the
# pipeline — see ../../docs/plan.md. Kept empty until then so the workspace
# builds cleanly during scaffolding.

[dev-dependencies]
# Phase 1 engine spike ONLY (examples/spike.rs) — de-risks Kokoro's ONNX I/O
# contract. These move into [dependencies] proper in Phase 2.
# `download-binaries` makes ort fetch the matching ONNX Runtime, so no system
# install is required.
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
hound = "3.5.1"
