[package]
name = "hanasu"
description = "A small Rust text-to-speech engine running the Kokoro-82M model via ONNX (ort + espeak-ng)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# ONNX inference. `download-binaries` fetches the matching ONNX Runtime, so no
# system install is required.
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
# Typed engine errors — no `Box<dyn Error>` in the public API.
thiserror = "2"
zip = { version = "8.6.0", default-features = false }

[dev-dependencies]
# The Phase 1 spike (examples/spike.rs) encodes a WAV to play; the engine itself
# returns raw samples, so hound stays example-only.
hound = "3.5.1"
