[package]
name = "hanasu"
description = "A small Rust text-to-speech engine running the Kokoro-82M model via ONNX (ort + espeak-ng)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
thiserror = "2"

[dev-dependencies]
hound = "3.5.1"
