[package]
name = "koklaude"
description = "Local, offline text-to-speech for Claude Code — Claude speaks its replies."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# The speech engine (workspace member; later extractable to its own repo/crate).
hanasu = { path = "../hanasu" }

anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
hound = "3.5.1"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ureq = "3.3.0"
